--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,14 @@ body {
   font-weight: 500;
   font-size: 16.5;
 }
+button {
+  font-family: "Red Hat Display";
+}
 a {
   text-decoration: none;
 }
 .container {
-  width: 500px;
+  width: min-content;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,16 +30,15 @@ a {
 .content {
   background: #fff;
   margin-top: 0;
-  height: 50%;
+  /* min-height: 50%; */
   border-radius: 0 0 1rem 1rem;
   text-align: center;
   word-spacing: 0.2rem;
   letter-spacing: 0.01rem;
   box-shadow: 2px 5px 13px 0px #7c7c7c66;
-  padding: 4.8rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  padding: 2rem;
+  display: grid;
+  place-content: center;
 }
 p {
   color: gray;
@@ -93,6 +95,7 @@ h1 {
   font-weight: 700;
   box-shadow: 0 16px 20px #c7cff3;
   transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
 .btn--primary:hover {
   opacity: 0.7;
